# 6-DOF-Arm-SImulation

urdf_arm_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
urdf_arm_moveit2/config/: fake_controllers.yaml  joint_limits.yaml  manipulator.srdf  ompl_planning.yaml  ros_controllers.yaml
urdf_arm_moveit2/launch/: chomp_planning_pipeline.launch.xml  computer_script.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  manipulator_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
urdf_arm_moveit2/rviz/: moveit_rviz.rviz  robot_rviz.rviz  rviz.rviz  rviz_2.rviz
urdf_arm_moveit2/scripts/: move_to_point.py
urdf_arm_moveit2/worlds/: object3.world  object4.world
